fix an error that allowed an overflow using nextDay button

--- a/src/css/Itinerary.css
+++ b/src/css/Itinerary.css
@@ -1,20 +1,3 @@
-/* .container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-  }
-  
-  .maps {
-    width: 80%;
-    margin-left: -250px;
-  }
-  
-  .directions {
-    width: 60%;
-    overflow: auto;
-    max-height: calc(100vh - 10px - 50px); /* subtract margin and other elements height */
-  /* } */
-
   :root {
     --container-margin-top: 50px;
   }
@@ -23,7 +6,7 @@
   .container {
     margin-top: var(--container-margin-top);
     display: flex;
-    height: 100%;
+    height: 90%;
   }
   
   .maps {
